# aws-workshop-energy-bedrock

./: README.md  iotdata.csv  manifest.json  pyproject.toml
cdk/: cdk.json  package.json  pnpm-lock.yaml
cdk/src/: app.ts
src/aws_workshop_energy_bedrock/: __init__.py
workshop/: setupQS.bash
workshop/completed/api/: bedrock_api.py
workshop/completed/predictive-maintenance/: pm_lib.py
workshop/completed/root-cause-analysis/: rca_app.py  rca_lib.py
workshop/completed/shift-handover-report/: shr_app.py  shr_lib.py
workshop/labs/predictive-maintenance/: pm_app.py  pm_lib.py
workshop/labs/root-cause-analysis/: rca_lib.py
workshop/setup/: requirements.txt
