[project]
name = "aws-workshop-energy-bedrock"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "yamatatsu", email = "the.kinnikuman@gmail.com" }
]
dependencies = [
    "pypdf>=5.1.0",
    "botocore>=1.35.81",
    "boto3>=1.35.81",
    "anthropic>=0.40.0",
    "streamlit>=1.41.1",
    "langchain>=0.3.12",
    "pydub>=0.25.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "boto3-stubs>=1.35.81",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/aws_workshop_energy_bedrock"]
